numerical experiments script
'tests' are currently only in the main notebook.
Need to be moved as script in tests

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@
 *.blg
 
 # notebooks
-nbs/.ipynb_checkpoints/*
+*/.ipynb_checkpoints/*
+*.ipynb_checkpoints/*
 
 # tests
 tests/__pycache__/*
@@ -13,3 +14,10 @@ tests/__pycache__/*
 # packaging
 src/opt_mo/__pycache__/*
 *opt_mo.*
+
+# vscode
+.vscode/*
+
+# vim temp files
+.*.swp
+.*.swo
