--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ install:
   - conda info -a
 
   - conda env create -f environment.yml
+  - source activate opt-mo
   - python setup.py develop
 
 script:
