--- a/environment.yml
+++ b/environment.yml
@@ -2,88 +2,17 @@ name: opt-mo
 channels:
   - defaults
 dependencies:
-  - ca-certificates=2018.03.07=0
-  - certifi=2018.4.16=py35_0
-  - libedit=3.1.20170329=h6b74fdf_2
-  - libffi=3.2.1=hd88cf55_4
-  - libgcc-ng=7.2.0=hdf63c60_3
-  - libstdcxx-ng=7.2.0=hdf63c60_3
-  - ncurses=6.1=hf484d3e_0
-  - openssl=1.0.2o=h20670df_0
-  - pip=10.0.1=py35_0
-  - python=3.5.5=hc3d631a_4
-  - readline=7.0=ha6073c6_4
-  - setuptools=39.1.0=py35_0
-  - sqlite=3.23.1=he433501_0
-  - tk=8.6.7=hc745277_3
-  - wheel=0.31.0=py35_0
-  - xz=5.2.3=h5e939de_4
-  - zlib=1.2.11=ha838bed_2
+  - python=3.6.7
+  - numpy=1.15.4
+  - pandas=0.23.4
   - pip:
-    - astroid==1.6.3
-    - axelrod==4.1.0
-    - backcall==0.1.0
-    - bleach==2.1.3
-    - cloudpickle==0.5.2
-    - cycler==0.10.0
-    - dask==0.17.4
-    - decorator==4.3.0
-    - entrypoints==0.2.3
-    - html5lib==1.0.1
-    - ipykernel==4.8.2
-    - ipython==6.4.0
-    - ipython-genutils==0.2.0
-    - ipywidgets==7.2.1
-    - isort==4.3.4
-    - jedi==0.12.0
-    - jinja2==2.10
-    - jsonschema==2.6.0
-    - jupyter==1.0.0
-    - jupyter-client==5.2.3
-    - jupyter-console==5.2.0
-    - jupyter-core==4.4.0
-    - kiwisolver==1.0.1
-    - lazy-object-proxy==1.3.1
-    - markupsafe==1.0
-    - matplotlib==2.2.2
-    - mccabe==0.6.1
-    - mistune==0.8.3
-    - mpmath==1.0.0
-    - nbconvert==5.3.1
-    - nbformat==4.4.0
-    - notebook==5.5.0
-    - numpy==1.14.3
-    - pandas==0.23.0rc2
-    - pandocfilters==1.4.2
-    - parso==0.2.0
-    - pep8==1.7.1
-    - pexpect==4.5.0
-    - pickleshare==0.7.4
-    - prompt-toolkit==1.0.15
-    - ptyprocess==0.5.2
-    - pygments==2.2.0
-    - pylint==1.8.4
-    - pyparsing==2.2.0
-    - python-dateutil==2.7.3
-    - pytz==2018.4
-    - pyzmq==17.0.0
-    - qtconsole==4.3.1
-    - scikit-learn==0.19.1
+    - axelrod==4.4.0
+    - pytest==4.0.1
+    - sympy==1.2.0
     - scikit-optimize==0.5.2
-    - scipy==1.1.0
-    - send2trash==1.5.0
-    - simplegeneric==0.8.1
-    - six==1.11.0
-    - sympy==1.1.1
-    - terminado==0.8.1
-    - testpath==0.3.1
-    - toolz==0.9.0
-    - tornado==5.0.2
-    - tqdm==4.23.3
-    - traitlets==4.3.2
-    - wcwidth==0.1.7
-    - webencodings==0.5.1
-    - widgetsnbextension==3.2.1
-    - wrapt==1.10.11
+    - jupyter==1.0.0
+    - jupyter-console==5.2.0
+    - ipython==6.4.0
+    - pytest==4.0.1
 prefix: /home/nightwing/anaconda3/envs/opt-mo
 
