--- a/environment.yml
+++ b/environment.yml
@@ -14,5 +14,6 @@ dependencies:
     - jupyter-console==5.2.0
     - ipython==6.4.0
     - pytest==4.0.1
+    - sqlalchemy==1.2.17
 prefix: /home/nightwing/anaconda3/envs/opt-mo
 
