--- a/environment.yml
+++ b/environment.yml
@@ -14,6 +14,7 @@ dependencies:
     - jupyter-console==5.2.0
     - ipython==6.4.0
     - pytest==4.0.1
+    - pytest-cov==2.7.1  
     - sqlalchemy==1.2.17
 prefix: /home/nightwing/anaconda3/envs/opt-mo
 
