--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: python
 python:
   - "3.6"
 before_install:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
+  - export MPLBACKEND="agg"
+dist: xenial
+services:
+  - xvfb
 install:
   - sudo apt-get update
   # We do this conditionally because it saves us some downloading if the
@@ -23,5 +25,4 @@ install:
 
 script:
 
-  - cd tests
-  - python -m unittest discover
+  - sh test.sh
