--- a/environment.yml
+++ b/environment.yml
@@ -6,15 +6,17 @@ dependencies:
   - numpy=1.15.4
   - pandas=0.23.4
   - pip:
+    - attrs==19.1.0
     - axelrod==4.4.0
-    - pytest==4.0.1
+    - black==18.9b0
     - sympy==1.2.0
     - scikit-optimize==0.5.2
     - jupyter==1.0.0
     - jupyter-console==5.2.0
     - ipython==6.4.0
     - pytest==4.0.1
-    - pytest-cov==2.7.1  
+    - pytest-cov==2.7.1
     - sqlalchemy==1.2.17
+    - fsspec==0.3.3
 prefix: /home/nightwing/anaconda3/envs/opt-mo
 
