Adjust the environment due to upstream updates
Tests would not run on my machine due to some upstream change in:

- `matplotlib`, error messages lead me to:
  https://stackoverflow.com/questions/31373163/anaconda-runtime-error-python-is-not-installed-as-a-framework/41433353
- `sklearn` (a dependency of `scikit-opt`), error messages lead me to:
  https://github.com/skggm/skggm/issues/124

--- a/environment.yml
+++ b/environment.yml
@@ -3,8 +3,10 @@ channels:
   - defaults
 dependencies:
   - python=3.6.7
+  - matplotlib=3.2.2
   - numpy=1.15.4
   - pandas=0.23.4
+  - scikit-learn=0.20.1
   - pip:
     - attrs==19.1.0
     - axelrod==4.4.0
